dropshot/tests/fail/bad_channel1a.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel1a.rs:11:1
   |
11 | async fn bad_channel() -> dropshot::WebsocketChannelResult {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint `bad_channel` must have at least two arguments: RequestContext and WebsocketConnection
  --> tests/fail/bad_channel1a.rs:11:21
   |
11 | async fn bad_channel() -> dropshot::WebsocketChannelResult {
   |                     ^^
